[package]
name = "strauws"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
ndarray = "0.15.6"
rustfft = "6.1.0"
bio = "2.0.1"
rand = "0.8.0"
rand_distr = "0.4.3"
tempfile = "3.10.1"
byteorder = "1.5.0"
structopt = "0.3.26"
num-complex = "0.4.6"
sys-info = "0.9"